@@ -8,16 +8,20 @@ import com.example.isdfarmersmarket.dao.models.Image;
 import com.example.isdfarmersmarket.dao.models.Product;
 import com.example.isdfarmersmarket.dao.models.User;
 import com.example.isdfarmersmarket.dao.repositories.*;
+import com.example.isdfarmersmarket.dao.specifications.ProductSpecification;
 import com.example.isdfarmersmarket.web.commands.CreateProductCommand;
 import com.example.isdfarmersmarket.web.commands.UpdateProductCommand;
 import com.example.isdfarmersmarket.web.dto.*;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
@@ -41,7 +45,7 @@ public class ProductServiceImpl implements ProductService {
     @Override
     @Transactional
     public ProductDTO createProduct(CreateProductCommand createProductCommand) {
-        Set<Image> images = new HashSet<>();
+        List<Image> images = new ArrayList<>();
         if (createProductCommand.getImagesBase64() != null && !createProductCommand.getImagesBase64().isEmpty()) {
             createProductCommand.getImagesBase64().forEach(file -> {
                 Image image = null;
@@ -53,6 +57,7 @@ public class ProductServiceImpl implements ProductService {
                 images.add(image);
             });
         }
+        images.forEach(image -> {imageRepository.save(image);});
         Category category = categoryRepository.getCategoryById(createProductCommand.getCategoryId())
                 .orElseThrow(() -> new EntityNotFoundException(CATEGORY_FIND_FAILED_BY_ID));
         Product product = Product.builder()
@@ -60,10 +65,9 @@ public class ProductServiceImpl implements ProductService {
                 .description(createProductCommand.getDescription())
                 .unitType(createProductCommand.getUnitType())
                 .pricePerUnit(createProductCommand.getPricePerUnit())
-                .discountPercents(createProductCommand.getDiscountPercents())
                 .quantity(createProductCommand.getQuantity())
                 .category(category)
-                .images(images).build();
+                .images(new HashSet<>(images)).build();
         Product savedProduct = productRepository.save(product);
         images.forEach(image -> {image.setProduct(savedProduct);});
         return productMapper.map(savedProduct);
@@ -113,18 +117,14 @@ public class ProductServiceImpl implements ProductService {
     }
     @Override
     @Transactional
-    public List<ProductDTO> getAllProducts(Long category,String search) {
-        if (category == null && (search == null || search.isBlank())) {
-            return productMapper.mapProducts(productRepository.findAll());
-        }
-        List<Product> filteredProducts = productRepository.findAll().stream()
-                .filter(product -> (category == null || product.getCategory().getId().equals(category)))
-                .filter(product -> (search == null || search.isBlank()
-                        || product.getTitle().toLowerCase().contains(search.toLowerCase())
-                        || product.getDescription().toLowerCase().contains(search.toLowerCase())))
-                .collect(Collectors.toList());
-
-        return productMapper.mapProducts(filteredProducts);
+    public Map<String, Object> getAllProducts(Long category, String search, Pageable pageable) {
+        Specification<Product> filters = Specification.
+                where(StringUtils.isBlank(search) ? null : ProductSpecification.titleOrDescLike(search))
+                .and((category == null || category == 0L) ? null : ProductSpecification.categoryIs(category));
+        Map<String, Object> response = new HashMap<>();
+        response.put("content",productMapper.mapToCompactProductsDTO(productRepository.findAll(filters, pageable).stream().toList()));
+        response.put("totalElements", productRepository.count(filters));
+        return response;
     }
 
     @Override
@@ -156,14 +156,14 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     @Transactional
-    public void updateProductReview(Product product) {
-        ProductReviewStatsDTO productReviewStatsDTO = productReviewRepository
+    public void updateProductRating(Product product) {
+        ReviewStatsDTO reviewStatsDTO = productReviewRepository
                 .findReviewStatsByProduct(product);
 
-        product.setRating(productReviewStatsDTO
+        product.setRating(reviewStatsDTO
                 .getAverageRating()
                 .floatValue());
-        product.setReviewCount(productReviewStatsDTO
+        product.setReviewCount(reviewStatsDTO
                 .getReviewCount()
                 .intValue());
 
@@ -172,13 +172,17 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     @Transactional
-    public ProductPageDTO getProductPageById(Long productId, @AuthenticationPrincipal JwtPrincipal principal) {
+    public ProductPageDTO getProductPageById(Long productId) {
+        JwtPrincipal principal = getPrincipal();
         var product = productRepository
                 .findById(productId)
                 .orElseThrow(() -> new EntityNotFoundException(PRODUCT_FIND_FAILED_BY_ID));
-        User user = userRepository.findById(principal.getId()).orElseThrow();
         ProductPageDTO productPageDTO = productMapper.mapToProductPage(product);
-        if(user.getWishlist().contains(product)) productPageDTO.setIsInWishlist(true);
+        if(principal!=null)
+        {
+            User user = userRepository.findById(principal.getId()).orElseThrow();
+            if(user.getWishlist().contains(product)) productPageDTO.setIsInWishlist(true);
+        }
         return productPageDTO;
     }
 
@@ -192,4 +196,8 @@ public class ProductServiceImpl implements ProductService {
         image.setBytes(decodedBytes);
         return image;
     }
+    private JwtPrincipal getPrincipal() {
+        return (JwtPrincipal) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+    }
+
 }
